Fix issues based on user testing
Most commonly reported concern was on mobile screens with width less than 640px. The space on the header was fixed to accomodate for the height. One other issue was the word break on the home page, which was fixed using wrap.

--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,10 @@ a:focus {
   display: none;
 }
 
+.homepage-text {
+  word-wrap: break-word;
+}
+
 @keyframes jump {
 
   0% {
@@ -207,8 +211,9 @@ a:focus {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 78vh;
-    width: 80vw;
+    min-height: 75vh;
+    max-height: 75vh;
+    width: 85vw;
   }
 
   .btn {
